// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`FileLions deleted by administration 1`] = `[]`;

exports[`FileLions extracts direct stream URLs from plain script blocks 1`] = `
[
  {
    "format": "mp4",
    "label": "FileLions",
    "meta": {
      "extractorId": "filelions",
      "title": "Example video title",
    },
    "requestHeaders": {
      "Origin": "https://filelions.to",
      "Referer": "https://filelions.to/f/plain-script-source",
      "User-Agent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/136.0.0.0 Safari/537.36",
    },
    "ttl": 900000,
    "url": "https://cdn.example.com/direct-video.mp4",
  },
]
`;

exports[`FileLions file not found 1`] = `[]`;

exports[`FileLions filelions f 1`] = `
[
  {
    "format": "hls",
    "label": "FileLions",
    "meta": {
      "bytes": 481191526,
      "extractorId": "filelions",
      "height": 720,
      "title": "dexter resurrection s01e01 1080p web h264-successfulcrab",
    },
    "requestHeaders": {
      "Origin": "https://filelions.to",
      "Referer": "https://filelions.to/f/tyn45apubte2",
      "User-Agent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/136.0.0.0 Safari/537.36",
    },
    "ttl": 900000,
    "url": "https://jdou5wo6ffta.acek-cdn.com/hls2/01/05594/tyn45apubte2_n/master.m3u8?t=w_Wpigm0_ZrpeezgjMy6818jvBa8Sox6uiDGebvewzQ&s=1759838230&e=129600&f=27974684&srv=F6vE2P5Wjncn&i=0.4&sp=500&p1=F6vE2P5Wjncn&p2=F6vE2P5Wjncn&asn=13335",
  },
]
`;

exports[`FileLions mivalyo v referer lock 1`] = `
[
  {
    "format": "hls",
    "label": "FileLions",
    "meta": {
      "bytes": 2097152,
      "extractorId": "filelions",
      "height": 1080,
      "referer": "https://kinoger.com",
      "title": "Versailles S01E01 German AC3 DL 1080p BDRip x265-FuN",
    },
    "requestHeaders": {
      "Origin": "https://mivalyo.com",
      "Referer": "https://kinoger.com",
      "User-Agent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/136.0.0.0 Safari/537.36",
    },
    "ttl": 900000,
    "url": "https://wpvsahsvl0yo.ovaltinecdn.com/hls2/01/01552/tah5znapz3e5_n/master.m3u8?t=U21hPPMdsOkpb9VDkTXCsRLwm4hYZ0cvlGolS3SwuTU&s=1759838232&e=129600&f=7760835&srv=GOweneve6B0I&i=0.4&sp=500&p1=GOweneve6B0I&p2=GOweneve6B0I&asn=13335",
  },
]
`;

exports[`FileLions uses size metadata when title is absent 1`] = `
[
  {
    "format": "mp4",
    "label": "FileLions",
    "meta": {
      "bytes": 1288490188,
      "extractorId": "filelions",
    },
    "requestHeaders": {
      "Origin": "https://filelions.to",
      "Referer": "https://filelions.to/f/size-and-no-title",
      "User-Agent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/136.0.0.0 Safari/537.36",
    },
    "ttl": 900000,
    "url": "https://cdn.example.com/size-only.mp4",
  },
]
`;
